# src/generated/java/com/ebs/model/EmployeeDTO.java
@@ -1,0 +1,232 @@
+package com.ebs.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * EmployeeDTO
+ */
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-12-20T18:43:45.486+01:00")
+
+public class EmployeeDTO   {
+  @JsonProperty("id")
+  private Integer id = null;
+
+  @JsonProperty("name")
+  private String name = null;
+
+  @JsonProperty("surname")
+  private String surname = null;
+
+  @JsonProperty("email")
+  private String email = null;
+
+  @JsonProperty("address")
+  private String address = null;
+
+  @JsonProperty("salary")
+  private Long salary = null;
+
+  @JsonProperty("companyId")
+  private Integer companyId = null;
+
+  public EmployeeDTO id(Integer id) {
+    this.id = id;
+    return this;
+  }
+
+  /**
+   * Get id
+   * @return id
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Integer getId() {
+    return id;
+  }
+
+  public void setId(Integer id) {
+    this.id = id;
+  }
+
+  public EmployeeDTO name(String name) {
+    this.name = name;
+    return this;
+  }
+
+  /**
+   * Get name
+   * @return name
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
+
+  public EmployeeDTO surname(String surname) {
+    this.surname = surname;
+    return this;
+  }
+
+  /**
+   * Get surname
+   * @return surname
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getSurname() {
+    return surname;
+  }
+
+  public void setSurname(String surname) {
+    this.surname = surname;
+  }
+
+  public EmployeeDTO email(String email) {
+    this.email = email;
+    return this;
+  }
+
+  /**
+   * Get email
+   * @return email
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getEmail() {
+    return email;
+  }
+
+  public void setEmail(String email) {
+    this.email = email;
+  }
+
+  public EmployeeDTO address(String address) {
+    this.address = address;
+    return this;
+  }
+
+  /**
+   * Get address
+   * @return address
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getAddress() {
+    return address;
+  }
+
+  public void setAddress(String address) {
+    this.address = address;
+  }
+
+  public EmployeeDTO salary(Long salary) {
+    this.salary = salary;
+    return this;
+  }
+
+  /**
+   * Get salary
+   * minimum: 1
+   * @return salary
+  **/
+  @ApiModelProperty(value = "")
+
+@Min(1)
+  public Long getSalary() {
+    return salary;
+  }
+
+  public void setSalary(Long salary) {
+    this.salary = salary;
+  }
+
+  public EmployeeDTO companyId(Integer companyId) {
+    this.companyId = companyId;
+    return this;
+  }
+
+  /**
+   * Get companyId
+   * @return companyId
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Integer getCompanyId() {
+    return companyId;
+  }
+
+  public void setCompanyId(Integer companyId) {
+    this.companyId = companyId;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    EmployeeDTO employeeDTO = (EmployeeDTO) o;
+    return Objects.equals(this.id, employeeDTO.id) &&
+        Objects.equals(this.name, employeeDTO.name) &&
+        Objects.equals(this.surname, employeeDTO.surname) &&
+        Objects.equals(this.email, employeeDTO.email) &&
+        Objects.equals(this.address, employeeDTO.address) &&
+        Objects.equals(this.salary, employeeDTO.salary) &&
+        Objects.equals(this.companyId, employeeDTO.companyId);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, name, surname, email, address, salary, companyId);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class EmployeeDTO {\n");
+    
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    name: ").append(toIndentedString(name)).append("\n");
+    sb.append("    surname: ").append(toIndentedString(surname)).append("\n");
+    sb.append("    email: ").append(toIndentedString(email)).append("\n");
+    sb.append("    address: ").append(toIndentedString(address)).append("\n");
+    sb.append("    salary: ").append(toIndentedString(salary)).append("\n");
+    sb.append("    companyId: ").append(toIndentedString(companyId)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
