# src/generated/java/de/ebs/controller/EmployeeApi.java
@@ -1,76 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.3.1).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package de.ebs.controller;
-
-import de.ebs.model.EmployeeDTO;
-import de.ebs.model.ErrorDTO;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.swagger.annotations.*;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.io.IOException;
-import java.util.List;
-import java.util.Optional;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-12-20T00:53:27.219+01:00")
-
-@Api(value = "employee", description = "the employee API")
-public interface EmployeeApi {
-
-    Logger log = LoggerFactory.getLogger(EmployeeApi.class);
-
-    default Optional<ObjectMapper> getObjectMapper() {
-        return Optional.empty();
-    }
-
-    default Optional<HttpServletRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    default Optional<String> getAcceptHeader() {
-        return getRequest().map(r -> r.getHeader("Accept"));
-    }
-
-    @ApiOperation(value = "", nickname = "getEmployee", notes = "Get", response = EmployeeDTO.class, tags={  })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Products matching the search parameters", response = EmployeeDTO.class),
-        @ApiResponse(code = 400, message = "Bad Request", response = ErrorDTO.class),
-        @ApiResponse(code = 401, message = "Access is denied due to invalid credentials", response = ErrorDTO.class),
-        @ApiResponse(code = 500, message = "Internal Server Error", response = ErrorDTO.class) })
-    @RequestMapping(value = "/employee",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    default ResponseEntity<EmployeeDTO> getEmployee(@ApiParam(value = "Mgb code") @Valid @RequestParam(value = "mgbCode", required = false) String mgbCode) {
-        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
-            if (getAcceptHeader().get().contains("application/json")) {
-                try {
-                    return new ResponseEntity<>(getObjectMapper().get().readValue("{  \"empId\" : 0}", EmployeeDTO.class), HttpStatus.NOT_IMPLEMENTED);
-                } catch (IOException e) {
-                    log.error("Couldn't serialize response for content type application/json", e);
-                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
-                }
-            }
-        } else {
-            log.warn("ObjectMapper or HttpServletRequest not configured in default EmployeeApi interface so no example is generated");
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-    }
-
-}
